--- a/paper/references.bib
+++ b/paper/references.bib
@@ -108,3 +108,13 @@
   year = {2018},
   doi = {10.1002/prop.201800056}
 }
+
+@article{kerr2023singularities,
+  author = {R. P. Kerr},
+  title = {Do Black Holes have Singularities?},
+  journal = {Preprint},
+  year = {2023},
+  month = {November},
+  doi = {10.13140/RG.2.2.34286.38723},
+  url = {https://www.researchgate.net/publication/375744216_Do_Black_Holes_have_Singularities}
+}
