--- a/paper/sections/stability_open_questions.tex
+++ b/paper/sections/stability_open_questions.tex
@@ -3,10 +3,11 @@
 
 The self-regulating black hole core model introduces a structured interior where local Hawking-like radiation counteracts gravitational collapse, leading to an equilibrium curvature at \( \mathcal{R}_c \). However, for this framework to be physically viable, the equilibrium state must be stable against perturbations. Additionally, this model raises fundamental questions regarding black hole thermodynamics, information flow, and long-term evolution.
 
-We emphasize that this section provides a heuristic treatment of stability and highlights open problems rather than offering a definitive analysis. A full stability study requires a more detailed treatment of quantum backreaction effects and nonlinear dynamics.
+This section provides a heuristic treatment of stability and highlights open problems rather than offering a definitive analysis. A full stability study requires a more detailed treatment of quantum backreaction effects and nonlinear dynamics.
 
 \subsection{Perturbative Stability of the Core}
-A key question is whether small perturbations in curvature or energy density within the core lead to divergence (instability) or are naturally damped (stability). Given the heuristic nature of this framework, we provide a preliminary discussion of potential stability conditions.
+
+A key question is whether small perturbations in curvature or energy density within the core lead to divergence (instability) or are naturally damped (stability). Since the model assumes that radiation emission is regulated by curvature, stability depends on how effectively this feedback mechanism responds to deviations from equilibrium.
 
 \subsubsection{Linear Stability Analysis}
 We define a small perturbation \( \delta \mathcal{R}(r,t) \) around the equilibrium curvature:
@@ -23,9 +24,9 @@ where:
     \item \( \lambda \) is a damping (if positive) or growth (if negative) coefficient.
 \end{itemize}
 
-If \( \lambda > 0 \), perturbations decay over time, suggesting **stability**. If \( \lambda < 0 \), the core structure is unstable, potentially leading to either collapse or dispersion.
+If \( \lambda > 0 \), perturbations decay over time, suggesting **stability**. If \( \lambda < 0 \), the core structure is unstable, potentially leading to either collapse or dispersal.
 
-The value of \( \lambda \) depends on the radiation response function \( f(\mathcal{R}) \). If radiation increases rapidly with curvature, the feedback mechanism should dampen perturbations. However, if radiation saturates or responds too weakly, the system may be prone to instabilities.
+The value of \( \lambda \) depends on the radiation response function \( f(\mathcal{R}) \). If radiation increases strongly with curvature, perturbations should be suppressed. However, if radiation saturates or responds too weakly, the system may be prone to instabilities.
 
 \subsubsection{Energy Density Stability}
 Since curvature and energy density are linked by Einstein’s equations, perturbations in \( \rho \) also affect stability. The key question is whether energy density perturbations reinforce equilibrium or cause runaway behavior.
