--- a/paper/sections/mathematical_framework.tex
+++ b/paper/sections/mathematical_framework.tex
@@ -75,7 +75,7 @@ If \( \mathcal{R}_c \) is associated with quantum gravitational effects, then th
 \end{equation}
 suggesting a Planck-scale structure.
 
-At radii \( r < r_c \), the curvature remains approximately constant at \( \mathcal{R}_c \), preventing the formation of a singularity. This implies that the black hole interior contains a **finite-curvature core** rather than a region of unrestricted collapse.
+At radii \( r < r_c \), the curvature remains approximately constant at \( \mathcal{R}_c \), preventing the formation of a singularity. This implies that the black hole interior contains a finite-curvature core rather than a region of unrestricted collapse.
 
 \subsection{Avoidance of the Singularity}
 
@@ -90,8 +90,8 @@ If equilibrium is reached, the curvature does not diverge, but instead remains f
 
 This implies:
 \begin{itemize}
-    \item The singularity is replaced by a **finite curvature core**.
-    \item The mass-energy distribution remains **structured rather than collapsing to a point**.
+    \item The singularity is replaced by a finite curvature core.
+    \item The mass-energy distribution remains structured rather than collapsing to a point.
     \item The core remains dynamically stable (subject to further stability analysis).
 \end{itemize}
 
@@ -99,8 +99,8 @@ This implies:
 
 If a self-regulating core forms, the evolution of the black hole follows a two-step process:
 \begin{enumerate}
-    \item **Hawking radiation emission at the event horizon**, leading to gradual black hole evaporation.
-    \item **Internal restructuring**, where the core dynamically adjusts to maintain equilibrium.
+    \item Hawking radiation emission at the event horizon, leading to gradual black hole evaporation.
+    \item Internal restructuring, where the core dynamically adjusts to maintain equilibrium.
 \end{enumerate}
 
 As the black hole evaporates, the core radius \( r_c \) may shrink. The long-term behavior depends on whether the core fully evaporates or stabilizes as a remnant.
