--- a/paper/sections/stability_open_questions.tex
+++ b/paper/sections/stability_open_questions.tex
@@ -24,7 +24,7 @@ where:
     \item \( \lambda \) is a damping (if positive) or growth (if negative) coefficient.
 \end{itemize}
 
-If \( \lambda > 0 \), perturbations decay over time, suggesting **stability**. If \( \lambda < 0 \), the core structure is unstable, potentially leading to either collapse or dispersal.
+If \( \lambda > 0 \), perturbations decay over time, suggesting stability. If \( \lambda < 0 \), the core structure is unstable, potentially leading to either collapse or dispersal.
 
 The value of \( \lambda \) depends on the radiation response function \( f(\mathcal{R}) \). If radiation increases strongly with curvature, perturbations should be suppressed. However, if radiation saturates or responds too weakly, the system may be prone to instabilities.
 
@@ -39,12 +39,12 @@ where \( \rho_c \) is the equilibrium core density. The governing equation is:
 \begin{equation}
     \frac{\partial \delta \rho}{\partial t} + \frac{\partial}{\partial r} \left( \Phi_\text{rad} - \Phi_\text{collapse} \right) = 0.
 \end{equation}
-If **radiation outflow adjusts dynamically to stabilize \( \rho_c \)**, the core remains stable.
+If radiation outflow adjusts dynamically to stabilize \( \rho_c \), the core remains stable.
 
 We emphasize that this analysis remains heuristic; a full stability treatment requires a self-consistent perturbation theory in a quantum gravity framework.
 
 \subsection{Nonlinear Evolution and Late-Stage Dynamics}
-A complete treatment of stability must consider **nonlinear effects**. If the radiation response \( f(\mathcal{R}) \) saturates at high curvatures, feedback mechanisms could prevent instability. However, if radiation is not sufficiently responsive, perturbations could grow, leading to:
+A complete treatment of stability must consider nonlinear effects. If the radiation response \( f(\mathcal{R}) \) saturates at high curvatures, feedback mechanisms could prevent instability. However, if radiation is not sufficiently responsive, perturbations could grow, leading to:
 \begin{itemize}
     \item A gradual deviation from equilibrium, leading to core shrinkage or expansion.
     \item A catastrophic breakdown of the core, leading to renewed collapse or dispersal.
@@ -59,7 +59,7 @@ One of the major unresolved problems in black hole physics is the fate of inform
     \item The core itself could act as a quantum remnant, preventing information loss.
     \item Information may be redistributed internally but remain inaccessible from the exterior.
 \end{enumerate}
-Determining the core’s role in information flow requires an explicit **quantum description** of the interior radiation process. This remains an open problem, as no fully developed theory of black hole interiors currently resolves the information paradox unambiguously.
+Determining the core’s role in information flow requires an explicit quantum description of the interior radiation process. This remains an open problem, as no fully developed theory of black hole interiors currently resolves the information paradox unambiguously.
 
 \subsection{Late-Stage Evolution and Possible Remnants}
 As the black hole loses mass due to Hawking radiation, the equilibrium core should dynamically adjust. Possible end states include:
